--- a/first/src/main/resources/application.properties
+++ b/first/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/train2022
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
