--- a/first/src/main/resources/application.properties
+++ b/first/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/train2022
 spring.datasource.username=root
 spring.datasource.password=1234
